Composable - added position sticky to components, refactored tabs to remove the reliance on overflow: hidden, preventing position sticky from working

--- a/app/assets/stylesheets/koi/components/_composable.scss
+++ b/app/assets/stylesheets/koi/components/_composable.scss
@@ -23,6 +23,8 @@
     border: $divider;
     border-radius: $border-radius;
     padding: $xxx-small-unit;
+    position: sticky;
+    top: 68px;
   }
 
   &.composable--library__fixed > div {
